# pyro-analytics

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.dlt/: config.toml  secrets.toml.example
.github/workflows/: main.yml
docs/: camera-publisher-runbook.md  conf.py  index.md  pyromap-api-contract.md  pyromap-artifact-contract.md  pyromap-contracts.md  pyromap-runbooks.md  pyromap.md  pyronear-api.md  quickstart.md  sources.md  station-publisher-runbook.md
docs/_static/css/: custom.css
docs/_static/js/: custom.js
docs/reference/analytics/: analytics.cli.rst  analytics.rst
docs/reference/pyromap/: pyromap.cells.rst  pyromap.config.rst  pyromap.geojson.rst  pyromap.ingestion.rst  pyromap.privacy.rst  pyromap.publication.rst  pyromap.publishers.base.rst  pyromap.publishers.local.rst  pyromap.publishers.rst  pyromap.publishers.s3.rst  pyromap.records.rst  pyromap.rst  pyromap.schemas.rst
docs/reference/sources/: sources.backend.rst  sources.backend.source.rst  sources.rst
examples/cameras/: demo-api-cameras.json  demo-camera-cells.geojson
src/analytics/: __init__.py  __main__.py  cli.py  core.py
tests/: conftest.py  test_workspace.py
tests/analytics/: test_cli.py  test_core.py  test_demo_examples.py  test_smoke.py
