[project]
name = "pyro-analytics"
version = "0.1.0"
description = "Pyronear Analytics workspace for wildfire data analysis tooling."
readme = "README.md"
requires-python = ">=3.14,<3.15"
authors = [{ name = "Pyronear <contact@pyronear.org>", email = "contact@pyronear.org" }]
keywords = ["python", "uv", "workspace"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pyronear-cameras",
    "typer",
]

[project.scripts]
analytics = "analytics.cli:app"

[dependency-groups]
dev = [
    "pytest>=7.2.0",
    "pre-commit>=2.20.0",
    "mypy>=1.20.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.9.2",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
pyronear-cameras = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/analytics"]

[tool.mypy]
python_version = "3.14"
files = ["src/analytics", "packages/cameras/src/cameras", "packages/cameras/tests", "tests"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
testpaths = ["tests", "packages"]

[tool.ruff]
# Keep py39 to mirror shared lint rule intent from pyproject 2 defaults.
target-version = "py39"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    "YTT",
    "S",
    "B",
    "A",
    "C4",
    "T10",
    "SIM",
    "I",
    "C90",
    "E",
    "W",
    "F",
    "PGH",
    "UP",
    "RUF",
    "TRY",
]
ignore = [
    "E501",
    "E731",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]
"packages/*/tests/**/*.py" = ["S101"]

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["analytics", "packages"]
